@@ -14,6 +14,8 @@ import java.util.Map;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
+import static org.schabi.newpipe.extractor.utils.Utils.UTF_8;
+
 /*
  * Created by Christian Schabesberger on 02.02.16.
  *
@@ -69,16 +71,21 @@ public class Parser {
         } else {
             // only pass input to exception message when it is not too long
             if (input.length() > 1024) {
-                throw new RegexException("failed to find pattern \"" + pat.pattern());
+                throw new RegexException("failed to find pattern \"" + pat.pattern() + "\"");
             } else {
-                throw new RegexException("failed to find pattern \"" + pat.pattern() + " inside of " + input + "\"");
+                throw new RegexException("failed to find pattern \"" + pat.pattern() + "\" inside of \"" + input + "\"");
             }
         }
     }
 
     public static boolean isMatch(String pattern, String input) {
-        Pattern pat = Pattern.compile(pattern);
-        Matcher mat = pat.matcher(input);
+        final Pattern pat = Pattern.compile(pattern);
+        final Matcher mat = pat.matcher(input);
+        return mat.find();
+    }
+
+    public static boolean isMatch(Pattern pattern, String input) {
+        final Matcher mat = pattern.matcher(input);
         return mat.find();
     }
 
@@ -87,7 +94,7 @@ public class Parser {
         for (String arg : input.split("&")) {
             String[] splitArg = arg.split("=");
             if (splitArg.length > 1) {
-                map.put(splitArg[0], URLDecoder.decode(splitArg[1], "UTF-8"));
+                map.put(splitArg[0], URLDecoder.decode(splitArg[1], UTF_8));
             } else {
                 map.put(splitArg[0], "");
             }
